--- a/.github/workflows/main_gpt-chatbot.yml
+++ b/.github/workflows/main_gpt-chatbot.yml
@@ -68,9 +68,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C0FA2A158CD047DAAF0561ED43717F68 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_98060E0397AB409BBCDA3306E830FC9C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4224EF8ABF654AF193C5BDDF77F87B2B }}
+          client-id: cc1f200d-1fac-49f0-a0fe-19e5c7540c1f
+          tenant-id: abaf7467-5b78-4198-bcf3-4f5a82b54223
+          subscription-id: 73c27e8d-7e51-4f69-a720-b612b574874a
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
