--- a/.github/workflows/main_gpt-chatbot.yml
+++ b/.github/workflows/main_gpt-chatbot.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: mochizuki@microlink.co.jp
+          client-id: 0b02a6ad-c4b9-46df-8a58-768a48bcfb72
           tenant-id: abaf7467-5b78-4198-bcf3-4f5a82b54223
           subscription-id: 73c27e8d-7e51-4f69-a720-b612b574874a
 
