--- a/.github/workflows/main_gpt-chatbot.yml
+++ b/.github/workflows/main_gpt-chatbot.yml
@@ -71,6 +71,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          auth-type: service-principal
           
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
